# pyspanet

./: .gitignore  README.md  pyproject.toml  setup.cfg
pyspanet/: __init__.py  client.py  collections.py  config.py  connection.py  const.py  data.py  enums.py  exceptions.py
pyspanet/micro/: __init__.py  __main__.py  client.py  config.py  connection.py
pyspanet/net/: __init__.py  __main__.py  api.py  client.py  config.py  connection.py
tests/: test_collections.py
tests/data/vortex/: test_mercury.py
tests/fixtures/vortex/: mercury.txt
