[tool.poetry]
name = "pyspanet"
version = "0.0.1"
description = "Module to communicate with a Balboa spa wifi adapter."
authors = ["David Parry <david@introversion.com.au>"]

[tool.poetry.dependencies]
python = "^3.7.2"
aiohttp = "^3.8.4"
strenum = "^0.4.15"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
black = "^23.1.0"
isort = "^5.11.5"
mypy = "^1.1"
flake8 = "^5.0.4"
pylint = "^2.17.0"
tox = "^3.26.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = "__main__.py"

[tool.pylint.MAIN]
ignore = [
    "__main__.py",
]

[tool.pylint."MESSAGES CONTROL"]
disable = """
    broad-exception-caught,
    broad-exception-raised,
    import-error,
    unidiomatic-typecheck
"""